--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ li a:hover {
 #heroSection {
     height: 100vh;
     padding: 100px 0;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/hero-bg.png);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(assets/hero-bg.png);
 
     background-position: center;
     background-size: cover;
